--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body a:hover{
 }
 /*--banner--*/
 .banner {
-    background: url(../img/images/header.jpg) no-repeat center center fixed;
+    background: url(../img/home/header.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -47,19 +47,33 @@ body a:hover{
 /*--//banner--*/
 @media (min-width: 768px){
 .header-img{
-    max-width:68% !important;
+    max-width:58% !important;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle
 }
 
 }
 @media (max-width: 480px){
     .header-img{
-        max-width:30% !important;
+        max-width:20% !important;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        display: table-cell;
+        vertical-align: middle
     }
 }
 @media (min-width: 481px) and (max-width: 767px){
     .header-img{
-        max-width:50% !important;
-
+        max-width:40% !important;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        display: table-cell;
+        vertical-align: middle
     }
 }
 /*--top-nav--*/
@@ -209,7 +223,269 @@ a.more.more-right:hover {
     border-color: #E88010;
     color: #fff;
 }
+/*------------------Projects --------------------*/
 
+
+
+.categories ul {
+    list-style:none;
+    padding:0;
+    margin:0;
+    margin-bottom:20px;
+    text-align:center;
+
+}
+
+.categories ul li{
+    display:inline-block;
+    padding:0;
+    line-height:24px;
+    background:transparent;
+    margin:0;
+    margin-left:5px;
+    margin-bottom:10px;
+}
+
+.categories ul li a{
+    display:block;
+    font-size:18px;
+    font-weight:500;
+    padding:10px 20px;
+    border-radius:5px;
+    border:2px solid transparent;
+    -webkit-transition:all .2s ease-out;
+    transition:all .2s ease-out;
+}
+
+.categories ul li a,
+.categories ul li a:active,
+.categories ul li a:hover{
+    line-height:24px;
+    background:#fff;
+    color:orange;
+    text-decoration:none;
+}
+
+.categories ul li a:hover,
+.categories ul li.active a{
+    color:#fff;
+    background:orange;
+}
+
+.projects-container .row{
+    -webkit-transition:height .5s ease-out;
+    transition:height .5s ease-out;
+}
+
+.portfolio-item {
+    position:relative;
+    margin-bottom:30px;
+    -webkit-transform:scale(1);
+    transform:scale(1);
+    opacity:1;
+    -webkit-transition:all .4s ease-out;
+    transition:all .4s ease-out;
+}
+
+.portfolio-item.filtered {
+    -webkit-transform:scale(0.5);
+    transform:scale(0.5);
+    opacity:0.2;
+    cursor:default;
+}
+
+.no-opacity .portfolio-item.filtered {
+    display:none;
+}
+
+.portfolio-item.filtered a{
+    cursor:default;
+}
+
+.portfolio-item.filtered .enlarge,
+.portfolio-item.filtered .link,
+.portfolio-item.filtered .overlay-mask,
+.portfolio-item.filtered .project-title{
+    display:none;
+}
+
+.portfolio-thumb {
+    display:block;
+    position:relative;
+    box-shadow:0 2px 5px rgba(0,0,0,0.08);
+    overflow:hidden;
+}
+
+.scrollimation .portfolio-thumb {
+    -webkit-transform:translateY(100px);
+    transform:translateY(100px);
+    opacity:0;
+    -webkit-transition:opacity .4s ease-out, -webkit-transform .4s ease-out;
+    transition:opacity .4s ease-out, transform .4s ease-out;
+}
+
+.touch .scrollimation .portfolio-thumb,
+.scrollimation .portfolio-thumb.in {
+    -webkit-transform:translateY(0px);
+    transform:translateY(0px);
+    opacity:1;
+}
+
+.portfolio-thumb .overlay-mask{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:orange;
+    opacity:0;
+    filter:alpha(opacity=0);
+    z-index:1;
+    -webkit-transition:opacity .3s ease-out;
+    transition:opacity .3s ease-out;
+}
+
+
+.portfolio-thumb:hover .overlay-mask {
+    opacity:0.8;
+    filter:alpha(opacity=80);
+}
+
+.portfolio-thumb .enlarge,
+.portfolio-thumb .link{
+    display:inline-block;
+    margin:0;
+    margin-top:-25px;
+    font-size:50px;
+    line-height:50px;
+    color:#fff;
+    opacity:0;
+    filter:alpha(opacity=0);
+    position:absolute;
+    height:50px;
+    width:64px;
+    top:40%;
+    left:50%;
+    text-align:center;
+    z-index:3;
+
+}
+
+.portfolio-thumb .enlarge{
+    margin-left:-84px;
+    -webkit-transform:translateX(-200px);
+    transform:translateX(-200px);
+    -webkit-transition:all .3s ease-out;
+    transition:all .3s ease-out;
+}
+
+.portfolio-thumb:hover .enlarge{
+    -webkit-transform:translateX(0);
+    transform:translateX(0);
+    opacity:1;
+    filter:alpha(opacity=100);
+    -webkit-transition:all .3s ease-out .3s;
+    transition:all .3s ease-out .3s;
+}
+
+.portfolio-thumb .link{
+    margin-left:20px;
+    -webkit-transform:translateX(200px);
+    transform:translateX(200px);
+    -webkit-transition:all .3s ease-out;
+    transition:all .3s ease-out;
+}
+
+.portfolio-thumb:hover .link{
+    -webkit-transform:translate(0);
+    transform:translate(0);
+    opacity:1;
+    filter:alpha(opacity=100);
+    -webkit-transition:all .3s ease-out .6s;
+    transition:all .3s ease-out .6s;
+}
+
+.portfolio-thumb .enlarge.centered,
+.portfolio-thumb .link.centered{
+    margin-left:-32px;
+    -webkit-transform:translateY(-200px);
+    transform:translateY(-200px);
+    -webkit-transition-delay:0s;
+    transition-delay:0s;
+}
+
+.portfolio-thumb:hover .enlarge.centered,
+.portfolio-thumb:hover .link.centered{
+    -webkit-transform:translateY(0);
+    transform:translateY(0);
+    -webkit-transition-delay:0.3s;
+    transition-delay:0.3s;
+}
+
+.portfolio-thumb .project-title {
+    display:block;
+    width:100%;
+    position:absolute;
+    bottom:-100px;
+    background:#fff;
+    margin:0;
+    padding:20px 0;
+    font-size:21px;
+    font-weight:300;
+    color:#777;
+    text-align:center;
+    z-index:2;
+    -webkit-transition:bottom .4s ease-out,color .2s ease-out;
+    transition:bottom .4s ease-out,color .2s ease-out;
+}
+
+.portfolio-thumb:hover .project-title {
+    bottom:0;
+    -webkit-transition:bottom .3s ease-out .1s,color .2s ease-out 0s;
+    transition:bottom .3s ease-out .1s,color .2s ease-out 0s;
+}
+
+.portfolio-thumb .project-title:hover {
+    color:#5CC9DF;
+}
+/*------------------Team Members Here------------*/
+.cel-team{
+
+}
+.cel-team-title h4{
+    text-align: center;
+    font-size: 4em;
+    color: orange;
+    margin: 0.8em;
+}
+.cel-team-info p{
+
+    font-size: 2em;
+    color: black;
+    margin: 0.8em;
+}
+.cel-member-big-title h4{
+    text-align: center;
+    font-size: 4em;
+    color: grey;
+    margin: 0.8em;
+}
+.member-name h4{
+    font-size: 2em;
+    color: orange;
+}
+.member-title h4{
+    font-size: 1.5em;
+    color: black;
+}
+.member-desc p{
+    font-size: 0.8em;
+    color: gray;
+    margin: 0.4em;
+}
+.cel-member-img img {
+margin: 0.8em;
+}
 /*------------------ Social Media Icons Here----------*/
 
 /* entypo */
@@ -277,185 +553,7 @@ a.more.more-right:hover {
 #sticky-social a[class*="tumblr"],
 #sticky-social a[class*="tumblr"]:hover,
 #sticky-social a[class*="tumblr"] span { background: #32506d; }
-/*------------------ Slider Part starts Here----------*/
-#slider2,
-#slider3 {
-  box-shadow: none;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-  margin: 0 auto;
-}
-.rslides_tabs {
-  list-style: none;
-  padding: 0;
-  background: rgba(0,0,0,.25);
-  box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
-  -moz-box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
-  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
-  font-size: 18px;
-  list-style: none;
-  margin: 0 auto 50px;
-  max-width: 540px;
-  padding: 10px 0;
-  text-align: center;
-  width: 100%;
-}
-.rslides_tabs li {
-  display: inline;
-  float: none;
-  margin-right: 1px;
-}
-.rslides_tabs a {
-  width: auto;
-  line-height: 20px;
-  padding: 9px 20px;
-  height: auto;
-  background: transparent;
-  display: inline;
-}
-.rslides_tabs li:first-child {
-  margin-left: 0;
-}
-.rslides_tabs .rslides_here a {
-  background: rgba(255,255,255,.1);
-  color: #fff;
-  font-weight: bold;
-}
-.events {
-  list-style: none;
-}
-.callbacks_container {
-  float: left;
-  width: 100%;
-}
-.callbacks {
-  position: relative;
-  list-style: none;
-  overflow: hidden;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-}
-.callbacks li {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  top: 0;
-}
-.callbacks img {
-  position: relative;
-  z-index: 1;
-  height: auto;
-  border: 0;
-}
-.callbacks .caption {
-	display: block;
-	position: absolute;
-	z-index: 2;
-	font-size: 20px;
-	text-shadow: none;
-	color: #fff;
-	left: 0;
-	right: 0;
-	padding: 10px 20px;
-	margin: 0;
-	max-width: none;
-	top: 10%;
-	text-align: center;
-}
-.callbacks_nav {
-    position: absolute;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    top: 52%;
-    left: 6%;
-    opacity: 0.7;
-    z-index: 3;
-    text-indent: -9999px;
-    overflow: hidden;
-    text-decoration: none;
-    height: 64px;
-    width: 40px;
-    background: url("../images/icons.png") no-repeat 0px 0px;
-}
-.callbacks_nav.next {
-    left: auto;
-    background-position: right;
-    right: 5%;
-}
-.callbacks_nav:active {
-  opacity: 1.0;
-}
-#slider3-pager a {
-  display: inline-block;
-}
-#slider3-pager span{
-  float: left;
-}
-#slider3-pager span{
-	width:100px;
-	height:15px;
-	background:#fff;
-	display:inline-block;
-	border-radius:30em;
-	opacity:0.6;
-}
-#slider3-pager .rslides_here a {
-  background: #FFF;
-  border-radius:30em;
-  opacity:1;
-}
-#slider3-pager a {
-  padding: 0;
-}
-#slider3-pager li{
-	display:inline-block;
-}
-.rslides {
-  position: relative;
-  list-style: none;
-  overflow: hidden;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-}
-.rslides li {
-  -webkit-backface-visibility: hidden;
-  position: absolute;
-  display: none;
-  width: 100%;
-  left: 0;
-  top: 0;
-}
-.rslides li{
-  position: relative;
-  display: block;
-  float: left;
-}
-.rslides img {
-  height: auto;
-  border: 0;
-}
-.callbacks_tabs {
-    list-style: none;
-    position: absolute;
-    z-index: 999;
-    bottom: 8%;
-    right: 10%;
-    padding: 0;
-    margin: 0;
-}
-.slider-top{
-	text-align: center;
-	padding:10em 0;
-}
-.callbacks_tabs li{
-	display: inline-block;
-}
-@media screen and (max-width: 600px) {
-  .callbacks_nav {
-    top: 47%;
-    }
-}
+
 /*----*/
 .callbacks_tabs a{
  visibility: hidden;
@@ -487,7 +585,7 @@ a.more.more-right:hover {
 }
 .welcome{
 	text-align:center;
-        background: url(../img/images/Celebratory-homeNew_02.jpg) no-repeat center center fixed;
+        background: url(../img/home/Celebratory-homeNew_02.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -669,7 +767,7 @@ h5.caption {
 }
 /*--//view--*/
 .slid {
-    background: url(../img/images/Celebratory-homeNew_04.jpg) no-repeat center center fixed;
+    background: url(../img/home/Celebratory-homeNew_04.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -925,61 +1023,7 @@ h5.caption {
     display: block;
 }
 /*--- //footer ----*/
-/*--about--*/
-.about-grids {
-    margin-top: 2em;
-}
-.about-grids h4 {
-    font-size: 1.4em;
-    margin: 0 0 .5em 0;
-    color: #777;
-    line-height: 1.5em;
-}
-.about-grids p {
-  font-size: 1em;
-  color: #949494;
-  line-height: 2em;
-}
-.about-slid {
-    background: url(../images/slid.jpg)no-repeat 0px 0px fixed;
-    background-size: cover;
-    text-align: center;
-    padding: 6em 0;
-}
-.about-slid h3 {
-    color: #fff;
-    font-size: 8em;
-}
-.about-slid p {
-    color: #fff;
-    font-size: 1.1em;
-    margin: 0.5em auto 0;
-    line-height: 1.8em;
-    width: 60%;
-}
-.thumbnail.team-thmnl {
-  border: none;
-  text-align: center;
-}
-.about-team .caption {
-  padding: 1.5em .5em!important;
-}
-.about-team  h4 {
-  font-size: 1.5em;
-}
-.about-team  h4 a{
-  color: #3A3A3A;
-}
-.team-grids:hover div.caption a{
-  color: #E88010;
-}
-.about-team p {
-    font-size: 1em;
-    color: #949494;
-    line-height: 1.8em;
-	margin-top: 1em;
-}
-/*--//about--*/
+
 /*--gallery--*/
 .gallery-grid {
     margin: 1em;
@@ -1276,7 +1320,7 @@ h2.typoh2{
     margin-top: 3em;
 }
 .contact-info {
-    background: url(../images/slid2.jpg)no-repeat 0px 0px;
+    background: url(../img/home/Celebratory-homeNew_02.jpg)no-repeat 0px 0px;
     background-size: cover;
 	padding:5em 0;
 }
@@ -1371,7 +1415,7 @@ h2.typoh2{
 	height: 32px;
 	border: none;
 	text-indent: 100%;
-	background: url("../images/move-up.png") no-repeat 0px 0px;
+	background: url("../img/move-up.png") no-repeat 0px 0px;
 }
 #toTopHover {
 	width: 45px;
@@ -1480,7 +1524,7 @@ h2.typoh2{
 
 /*------qe------*/
 .qe{
-    background: url(../img/images/Celebratory-homeNew_06.jpg) no-repeat center center fixed;
+    background: url(../img/home/Celebratory-homeNew_06.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
