--- a/css/style.css
+++ b/css/style.css
@@ -334,231 +334,558 @@ background-image: url("../img/services/p1.jpg") ;
     padding-top: 150px;
     color: white;
 }
-/*------------------Projects --------------------*/
 
 
+/* Portfolio */
 
-.categories ul {
-    list-style:none;
-    padding:0;
-    margin:0;
-    margin-bottom:20px;
-    text-align:center;
-
+.container.portfolio_title {
+    padding-bottom: 0px;
 }
 
-.categories ul li{
-    display:inline-block;
-    padding:0;
-    line-height:24px;
-    background:transparent;
-    margin:0;
-    margin-left:5px;
-    margin-bottom:10px;
+#portfolio {
+    padding: 60px 0 40px;
 }
 
-.categories ul li a{
-    display:block;
-    font-size:18px;
-    font-weight:500;
-    padding:10px 20px;
-    border-radius:5px;
-    border:2px solid transparent;
-    -webkit-transition:all .2s ease-out;
-    transition:all .2s ease-out;
+
+
+/* Portfolio Filters */
+
+#filters {
+    margin-top: 10px;
+    margin-bottom: 40px;
+    text-align: center;
+    display: block;
+    float: none;
+    z-index: 2;
+    position: relative;
 }
 
-.categories ul li a,
-.categories ul li a:active,
-.categories ul li a:hover{
-    line-height:24px;
-    background:#fff;
-    color:orange;
-    text-decoration:none;
+#filters ul li {
+    display: inline-block;
+    margin: 0 5px;
 }
 
-.categories ul li a:hover,
-.categories ul li.active a{
-    color:#fff;
-    background:orange;
+#filters ul li a {
+    display: block;
 }
 
-.projects-container .row{
-    -webkit-transition:height .5s ease-out;
-    transition:height .5s ease-out;
+#filters ul li a h5 {
+    background: none repeat scroll 0 0 #f7f7f7;
+    border-radius: 4px;
+    display: inline-block;
+
+    font-size: 12px;
+    line-height: 20px;
+    margin-bottom: 5px;
+    padding: 10px 22px;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out 0s;
+    background: #fff;
+    border: #C2C2C2 solid 1px;
+    color: #7C7C7C;
+}
+
+#filters ul li a:hover h5, #filters ul li a.active h5 {
+    background: #fff;
+    color: #EFB21D;
+    text-decoration: none;
+    border: #EFB21D solid 1px;
+}
+
+.section-title h2 {
+    color: #222222;
+    font-family: 'Raleway', sans-serif;
+    font-size: 34px;
+    letter-spacing: -1px;
+    margin: 0 0 15px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.section-title span {
+    display: block;
+    color: #888888;
+    font-family: 'Open Sans',sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0 0 60px;
+    text-align: center;
+}
+
+
+
+/* Portfolio Items */
+
+#portfolio_wrapper {
+    position: relative;
+    padding: 0;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+}
+
+#portfolio_wrapper .one-four {
+    margin: 0!important;
+    line-height: 0;
+    width: 25%;
+    padding: 0;
+    position: relative;
 }
 
 .portfolio-item {
-    position:relative;
-    margin-bottom:30px;
-    -webkit-transform:scale(1);
-    transform:scale(1);
-    opacity:1;
-    -webkit-transition:all .4s ease-out;
-    transition:all .4s ease-out;
+    padding: 0;
+    position: relative;
+    overflow: hidden;
 }
 
-.portfolio-item.filtered {
-    -webkit-transform:scale(0.5);
-    transform:scale(0.5);
-    opacity:0.2;
-    cursor:default;
+.portfolio-item .portfolio_img {
+    overflow: hidden;
+    display: block;
+    position: relative;
 }
 
-.no-opacity .portfolio-item.filtered {
-    display:none;
+.portfolio-item .portfolio_img img {
+    width: 100%;
+    height: auto;
 }
 
-.portfolio-item.filtered a{
-    cursor:default;
+.portfolio-item:hover .item_overlay {
+    opacity: 1;
+    transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -webkit-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
 }
 
-.portfolio-item.filtered .enlarge,
-.portfolio-item.filtered .link,
-.portfolio-item.filtered .overlay-mask,
-.portfolio-item.filtered .project-title{
-    display:none;
+.item_overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    cursor: pointer;
 }
 
-.portfolio-thumb {
-    display:block;
-    position:relative;
-    box-shadow:0 2px 5px rgba(0,0,0,0.08);
-    overflow:hidden;
+.open-project-link {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 100;
 }
 
-.scrollimation .portfolio-thumb {
-    -webkit-transform:translateY(100px);
-    transform:translateY(100px);
-    opacity:0;
-    -webkit-transition:opacity .4s ease-out, -webkit-transform .4s ease-out;
-    transition:opacity .4s ease-out, transform .4s ease-out;
+.item_overlay:hover {
+    background:rgba(89, 89, 89, 0.7);
 }
 
-.touch .scrollimation .portfolio-thumb,
-.scrollimation .portfolio-thumb.in {
-    -webkit-transform:translateY(0px);
-    transform:translateY(0px);
-    opacity:1;
+.item_info {
+    position: absolute;
+    height: 100px;
+    width: 100%;
+    top: 50%;
+    margin-top: -50px;
+    text-align: center;
 }
 
-.portfolio-thumb .overlay-mask{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:orange;
-    opacity:0;
-    filter:alpha(opacity=0);
-    z-index:1;
-    -webkit-transition:opacity .3s ease-out;
-    transition:opacity .3s ease-out;
+.project_name {
+    color: #fff;
+    text-transform: uppercase;
+    margin-top: 25px;
+
+    opacity: 0;
+    font-size: 18px;
+    transition: all 0.2s ease 0s;
+    -moz-transition: all 0.2s ease 0s;
+    -webkit-transition: all 0.2s ease 0s;
+    -ms-transition: all 0.2s ease 0s;
+    -o-transition: all 0.2s ease 0s;
+    position: relative;
+    z-index: 10;
+}
+
+.portfolio-item:hover .project_name {
+    opacity: 1;
+    -webkit-transition: opacity .1s .2s;
+    -moz-transition: opacity .1s .2s;
+    -ms-transition: opacity .1s .2s;
+    -o-transition: opacity .1s .2s;
+    transition: opacity .1s .2s;
+}
+
+.project_catg {
+    font-size: 14px;
+    color: #fff;
+    opacity: 0;
+    margin-top: 0px;
+    transition: all 0.2s ease 0s;
+    -moz-transition: all 0.2s ease 0s;
+    -webkit-transition: all 0.2s ease 0s;
+    -ms-transition: all 0.2s ease 0s;
+    -o-transition: all 0.2s ease 0s;
+}
+
+.portfolio-item:hover .project_catg {
+    opacity: 0.8;
+    -webkit-transition: opacity .1s .2s;
+    -moz-transition: opacity .1s .2s;
+    -ms-transition: opacity .1s .2s;
+    -o-transition: opacity .1s .2s;
+    transition: opacity .1s .2s;
+}
+
+.zoom-icon {
+    left: 50%;
+    margin-left: -20px;
+    position: inherit;
+    width: 40px;
+    height: 40px;
+    margin-top: 40px;
+    opacity: 0;
+    background: url(images/zoom.png);
+    background-size: 40px 40px;
+    transition: all 0.3s ease 0.1s;
+    -moz-transition: all 0.3s ease 0.2s;
+    -webkit-transition: all 0.3s ease 0.2s;
+    -ms-transition: all 0.3s ease 0.2s;
+    -o-transition: all 0.3s ease 0.2s;
+}
+
+.portfolio-item:hover .zoom-icon {
+    opacity: 1;
+    margin-top: 0px;
+    -webkit-transition: opacity .3s .2s, margin-top .3s .2s;
+    -moz-transition: opacity .3s .2s, margin-top .3s .2s;
+    -ms-transition: opacity .3s .2s, margin-top .3s .2s;
+    -o-transition: opacity .3s .2s, margin-top .3s .2s;
+    transition: opacity .3s .2s, margin-top .3s .2s;
 }
 
 
-.portfolio-thumb:hover .overlay-mask {
-    opacity:0.8;
-    filter:alpha(opacity=80);
+
+
+/* Portfolio Isotope Transitions */
+
+.isotope, .isotope .isotope-item {
+    -webkit-transition-duration: 0.8s;
+    -moz-transition-duration: 0.8s;
+    -ms-transition-duration: 0.8s;
+    -o-transition-duration: 0.8s;
+    transition-duration: 0.8s;
 }
 
-.portfolio-thumb .enlarge,
-.portfolio-thumb .link{
-    display:inline-block;
-    margin:0;
-    margin-top:-25px;
-    font-size:50px;
-    line-height:50px;
-    color:#fff;
-    opacity:0;
-    filter:alpha(opacity=0);
-    position:absolute;
-    height:50px;
-    width:64px;
-    top:40%;
-    left:50%;
-    text-align:center;
-    z-index:3;
-
+.isotope {
+    -webkit-transition-property: height, width;
+    -moz-transition-property: height, width;
+    -ms-transition-property: height, width;
+    -o-transition-property: height, width;
+    transition-property: height, width;
 }
 
-.portfolio-thumb .enlarge{
-    margin-left:-84px;
-    -webkit-transform:translateX(-200px);
-    transform:translateX(-200px);
-    -webkit-transition:all .3s ease-out;
-    transition:all .3s ease-out;
+.isotope .isotope-item {
+    -webkit-transition-property: -webkit-transform, opacity;
+    -moz-transition-property: -moz-transform, opacity;
+    -ms-transition-property: -ms-transform, opacity;
+    -o-transition-property: -o-transform, opacity;
+    transition-property: transform, opacity;
 }
 
-.portfolio-thumb:hover .enlarge{
-    -webkit-transform:translateX(0);
-    transform:translateX(0);
-    opacity:1;
-    filter:alpha(opacity=100);
-    -webkit-transition:all .3s ease-out .3s;
-    transition:all .3s ease-out .3s;
+.isotope.no-transition, .isotope.no-transition .isotope-item, .isotope .isotope-item.no-transition {
+    -webkit-transition-duration: 0s;
+    -moz-transition-duration: 0s;
+    -ms-transition-duration: 0s;
+    -o-transition-duration: 0s;
+    transition-duration: 0s;
 }
 
-.portfolio-thumb .link{
-    margin-left:20px;
-    -webkit-transform:translateX(200px);
-    transform:translateX(200px);
-    -webkit-transition:all .3s ease-out;
-    transition:all .3s ease-out;
+
+
+/* Portfolio Expander */
+
+
+
+#project_container {
+    display: none;
+    background-color: #FFF;
 }
 
-.portfolio-thumb:hover .link{
-    -webkit-transform:translate(0);
-    transform:translate(0);
-    opacity:1;
-    filter:alpha(opacity=100);
-    -webkit-transition:all .3s ease-out .6s;
-    transition:all .3s ease-out .6s;
+#project-page-button-fullscreen {
+    height: auto;
+    z-index: 100;
+    position: absolute;
+    right: 30px;
+    top: 30px;
 }
 
-.portfolio-thumb .enlarge.centered,
-.portfolio-thumb .link.centered{
-    margin-left:-32px;
-    -webkit-transform:translateY(-200px);
-    transform:translateY(-200px);
-    -webkit-transition-delay:0s;
-    transition-delay:0s;
+#project-page-button-fullscreen li {
+    display: inline-block;
+    font-size: 30px;
 }
 
-.portfolio-thumb:hover .enlarge.centered,
-.portfolio-thumb:hover .link.centered{
-    -webkit-transform:translateY(0);
-    transform:translateY(0);
-    -webkit-transition-delay:0.3s;
-    transition-delay:0.3s;
+#project-page-button-fullscreen li a {
+    background: url(../img/close.png) no-repeat #fff;
+    background-size: 50px 50px;
+    width: 50px;
+    height: 50px;
+    display: block;
+    border-radius: 50px;
+    opacity: 0.5;
 }
 
-.portfolio-thumb .project-title {
-    display:block;
-    width:100%;
-    position:absolute;
-    bottom:-100px;
-    background:#fff;
-    margin:0;
-    padding:20px 0;
-    font-size:21px;
-    font-weight:300;
-    color:#777;
-    text-align:center;
-    z-index:2;
-    -webkit-transition:bottom .4s ease-out,color .2s ease-out;
-    transition:bottom .4s ease-out,color .2s ease-out;
+#project-page-button-fullscreen li a:hover {
+    opacity: 1;
 }
 
-.portfolio-thumb:hover .project-title {
-    bottom:0;
-    -webkit-transition:bottom .3s ease-out .1s,color .2s ease-out 0s;
-    transition:bottom .3s ease-out .1s,color .2s ease-out 0s;
+#project-page-button {
+    text-align: center;
+    margin-bottom: 20px;
+    height: auto;
+    position: relative;
+    z-index: 100;
 }
 
-.portfolio-thumb .project-title:hover {
-    color:#5CC9DF;
+#project-page-button li {
+    display: inline-block;
+    margin: 60px 10px 0px 10px;
+    font-size: 30px;
 }
+
+#project_data {
+    margin-bottom: 0px;
+}
+
+.project-section-title {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.project-section-title h1 {
+    margin-bottom: 5px!important;
+    letter-spacing: 1px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.project-page {
+    background-color: #FFF;
+    width: 100%;
+    height: auto;
+    left: 0;
+    padding-bottom: 40px;
+}
+
+
+/* Portfolio*/
+
+
+.project-image-slider .bx-wrapper .bx-next {
+    background: url("images/project_slider_right.png") no-repeat;
+    background-size: 35px 65px;
+    opacity: 0.3;
+    right: -90px;
+}
+
+.project-image-slider .bx-wrapper .bx-prev {
+    background: url("images/project_slider_left.png") no-repeat;
+    background-size: 35px 65px;
+    opacity: 0.3;
+    left: -90px;
+}
+
+.project-image-slider .bx-wrapper .bx-next:hover, .project-image-slider .bx-wrapper .bx-prev:hover {
+    opacity: 1;
+    background-position: 0;
+}
+
+.project-image-slider .bx-wrapper .bx-controls-direction a {
+    height: 65px;
+    margin-top: -33px;
+    outline: 0 none;
+    position: absolute;
+    text-indent: -9999px;
+    top: 50%;
+    width: 35px;
+    z-index: 100;
+}
+
+/* Portfolio Normal Expander */
+
+.project-description {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.small-border {
+    height: 2px;
+    width: 50px;
+    background-color: #ddd;
+    margin-bottom: 15px;
+}
+
+.visit-project {
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid #ddd;
+    margin-top: 20px;
+    padding: 55px 0 20px 0;
+}
+
+.project-description h5 {
+    color: #222222;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+
+
+/* Portfolio FullScreen Expander */
+
+#cycle-loader {
+    height: 32px;
+    left: 50%;
+    margin: -8px 0 0 -8px;
+    position: absolute;
+    top: 50%;
+    width: 32px;
+    z-index: 999;
+}
+
+#arrow_left {
+    top: 50%;
+    height: 60px;
+    position: absolute;
+    left: 30px;
+    width: 32px;
+    z-index: 1000;
+    margin-top: -30px;
+}
+
+#arrow_right {
+    top: 50%;
+    height: 60px;
+    position: absolute;
+    right: 30px;
+    width: 32px;
+    z-index: 1000;
+    margin-top: -30px;
+}
+
+#arrow_left:hover, #arrow_right:hover {
+    margin-top: -28px;
+}
+
+#arrow_left:active, #arrow_right:active {
+    margin-top: -28px;
+}
+
+div.mc-image {
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+}
+
+.in-slide-content div.info-slide {
+    background: #FFF url(images/info.png) no-repeat left bottom;
+    background-size: 46px 46px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 46px;
+    height: 46px;
+    margin: 0;
+    display: block;
+    text-indent: 10px;
+    -moz-border-radius: 23px;
+    -webkit-border-radius: 23px;
+    border-radius: 23px;
+    cursor: pointer;
+    z-index: 1000;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: alpha(opacity=0.5);
+    opacity: 0.5;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.in-slide-content div.info-slide:hover {
+    width: 200px;
+    background: #FFF;
+    position: absolute;
+    bottom: 40px;
+    padding: 10px 20px;
+    text-indent: 0px;
+    moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+    z-index: 1000;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=1);
+    opacity: 1;
+}
+
+.in-slide-content h2, .in-slide-content p {
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    line-height: 24px;
+}
+
+.in-slide-content h2 {
+    font-size: 14px;
+    color: #444;
+    text-shadow: none;
+    font-weight: normal;
+    text-transform: uppercase;
+    z-index: 1001;
+    position: relative;
+    white-space: nowrap;
+}
+
+.info-slide p {
+    color: #aaa;
+    font-size: 13px;
+    text-shadow: none;
+    z-index: 1001;
+    position: relative;
+    margin: 0;
+    font-weight: normal;
+    white-space: nowrap;
+}
+
+.in-slide-content div.info-slide h2 {
+    display: none;
+    padding: 10px 10px 0 10px;
+}
+
+.in-slide-content div.info-slide p {
+    display: none;
+    padding: 0px 10px 10px 10px;
+}
+
+.in-slide-content div.info-slide:hover h2, .in-slide-content div.info-slide:hover p {
+    display: inherit;
+    padding: 0;
+}
+
+
 /*------------------Team Members Here------------*/
 .cel-team{
 
